Refatoração para utilização de dtos
