# controllers/cursoController.go
@@ -3,8 +3,10 @@ package controllers
 import (
 	"strconv"
 	"github.com/gin-gonic/gin"
+	"github.com/go-playground/validator/v10"
 	"github.com/trsouza/faculdade-pd/database"
 	"github.com/trsouza/faculdade-pd/models"
+	"github.com/trsouza/faculdade-pd/dtos"
 )
 
 // @Summary Busca curso por id
@@ -66,11 +68,11 @@ func BuscarCursos(c *gin.Context) {
 // @Tags Controller Curso
 // @Accept json
 // @Produce json
-// @Param curso body models.Curso true "curso"
+// @Param curso body dtos.CursoCreateDTO true "curso"
 // @Success 201 {object} models.Curso
 // @Router /curso [POST]
 func CriarCurso(c *gin.Context) {
-	var curso models.Curso
+	var curso dtos.CursoCreateDTO
 	db := database.GetDatabase()
 
 	err := c.ShouldBindJSON(&curso)
@@ -81,7 +83,22 @@ func CriarCurso(c *gin.Context) {
 		return
 	}
 
-	err = db.Create(&curso).Error
+	validate := validator.New()
+
+    err = validate.Struct(curso)
+    if err != nil {
+        c.JSON(400, gin.H{
+			"erro": "objeto inválido: " + err.Error(),
+		})
+		return
+    }
+
+	novoCurso := models.Curso{
+		Nome: curso.Nome,
+		FaculdadeUniqueID: curso.FaculdadeUniqueID,
+	}
+
+	err = db.Create(&novoCurso).Error
 	if err != nil {
 		c.JSON(400, gin.H{
 			"erro": "não foi possível salvar o curso: " + err.Error(),
@@ -89,7 +106,7 @@ func CriarCurso(c *gin.Context) {
 		return
 	}
 
-	c.JSON(201, curso)
+	c.JSON(201, novoCurso)
 }
 
 // @Summary Deleta um curso
@@ -134,16 +151,17 @@ func DeletarCurso(c *gin.Context) {
 }
 
 // @Summary Edita um curso
-// @Description Edita um curso, os campos que devem ser enviados são: nome e "faculdade_unique_id
+// @Description Edita um curso, os campos que podem ser enviados são: nome e "faculdade_unique_id
 // @Tags Controller Curso
 // @Accept json
 // @Produce json
 // @Param id path int true "UniqueID do curso"
-// @Param curso body models.Curso true "curso"
+// @Param curso body dtos.CursoUpdateDTO true "curso"
 // @Success 200 {object} models.Curso
 // @Router /curso/{id} [PUT]
 func EditarCurso(c *gin.Context) {
-	var curso models.Curso
+	var curso dtos.CursoUpdateDTO
+	var novoCurso models.Curso
 	db := database.GetDatabase()
 	id := c.Param("id")
 	
@@ -155,7 +173,7 @@ func EditarCurso(c *gin.Context) {
 		return
 	}
 
-	err = db.First(&curso, newid).Error
+	err = db.First(&novoCurso, newid).Error
 	if err != nil {
 		c.JSON(404, gin.H{
 			"erro": "Curso não encontrado: " + err.Error(),
@@ -171,7 +189,10 @@ func EditarCurso(c *gin.Context) {
 		return
 	}
 
-	err = db.Save(&curso).Error
+	if curso.Nome != "" {  novoCurso.Nome = curso.Nome  }
+	if curso.FaculdadeUniqueID > 0 {  novoCurso.FaculdadeUniqueID = curso.FaculdadeUniqueID  }
+
+	err = db.Save(&novoCurso).Error
 	if err != nil {
 		c.JSON(400, gin.H{
 			"erro": "não foi possível editar o curso: " + err.Error(),
@@ -179,6 +200,6 @@ func EditarCurso(c *gin.Context) {
 		return
 	}
 
-	c.JSON(200, curso)
+	c.JSON(200, novoCurso)
 }
 
