# controllers/cursoDisciplinaController.go
@@ -3,8 +3,10 @@ package controllers
 import (
 	"strconv"
 	"github.com/gin-gonic/gin"
+	"github.com/go-playground/validator/v10"
 	"github.com/trsouza/faculdade-pd/database"
 	"github.com/trsouza/faculdade-pd/models"
+	"github.com/trsouza/faculdade-pd/dtos"
 )
 
 // @Summary Busca cursoDisciplina por id
@@ -67,11 +69,11 @@ func BuscarCursoDisciplinas(c *gin.Context) {
 // @Tags Controller CursoDisciplina
 // @Accept json
 // @Produce json
-// @Param cursoDiscipliona body models.CursoDisciplina true "cursoDiscipliona"
+// @Param cursoDiscipliona body dtos.CursoDisciplinaCreateDTO true "cursoDiscipliona"
 // @Success 201 {object} models.CursoDisciplina
 // @Router /curso-disciplina [POST]
 func CriarCursoDisciplina(c *gin.Context) {
-	var cursoDisciplina models.CursoDisciplina
+	var cursoDisciplina dtos.CursoDisciplinaCreateDTO
 	db := database.GetDatabase()
 
 	err := c.ShouldBindJSON(&cursoDisciplina)
@@ -82,7 +84,22 @@ func CriarCursoDisciplina(c *gin.Context) {
 		return
 	}
 
-	err = db.Create(&cursoDisciplina).Error
+	validate := validator.New()
+
+    err = validate.Struct(cursoDisciplina)
+    if err != nil {
+        c.JSON(400, gin.H{
+			"erro": "objeto inválido: " + err.Error(),
+		})
+		return
+    }
+
+	novoCursoDisciplina := models.CursoDisciplina{
+		CursoUniqueID: cursoDisciplina.CursoUniqueID,
+		DisciplinaUniqueID: cursoDisciplina.DisciplinaUniqueID,
+	}
+
+	err = db.Create(&novoCursoDisciplina).Error
 	if err != nil {
 		c.JSON(400, gin.H{
 			"erro": "não foi possível salvar o cursoDisciplina: " + err.Error(),
@@ -90,7 +107,7 @@ func CriarCursoDisciplina(c *gin.Context) {
 		return
 	}
 
-	c.JSON(201, cursoDisciplina)
+	c.JSON(201, novoCursoDisciplina)
 }
 
 // @Summary Deleta um cursoDiscipliona
@@ -135,16 +152,17 @@ func DeletarCursoDisciplina(c *gin.Context) {
 }
 
 // @Summary Edita um cursoDiscipliona
-// @Description Edita um cursoDiscipliona, os campos que devem ser enviados são: curso_unique_id e "disciplina_unique_id
+// @Description Edita um cursoDiscipliona, os campos que podem ser enviados são: curso_unique_id e "disciplina_unique_id
 // @Tags Controller CursoDisciplina
 // @Accept json
 // @Produce json
 // @Param id path int true "UniqueID do cursoDiscipliona"
-// @Param cursoDiscipliona body models.CursoDisciplina true "cursoDiscipliona"
+// @Param cursoDiscipliona body dtos.CursoDisciplinaUpdateDTO true "cursoDiscipliona"
 // @Success 200 {object} models.CursoDisciplina
 // @Router /curso-disciplina/{id} [PUT]
 func EditarCursoDisciplina(c *gin.Context) {
-	var cursoDisciplina models.CursoDisciplina
+	var cursoDisciplina dtos.CursoDisciplinaUpdateDTO
+	var novoCursoDisciplina models.CursoDisciplina
 	db := database.GetDatabase()
 	id := c.Param("id")
 	
@@ -156,7 +174,7 @@ func EditarCursoDisciplina(c *gin.Context) {
 		return
 	}
 
-	err = db.First(&cursoDisciplina, newid).Error
+	err = db.First(&novoCursoDisciplina, newid).Error
 	if err != nil {
 		c.JSON(404, gin.H{
 			"erro": "CursoDisciplina não encontrado: " + err.Error(),
@@ -172,7 +190,10 @@ func EditarCursoDisciplina(c *gin.Context) {
 		return
 	}
 
-	err = db.Save(&cursoDisciplina).Error
+	if cursoDisciplina.CursoUniqueID > 0 {  novoCursoDisciplina.CursoUniqueID = cursoDisciplina.CursoUniqueID  }
+	if cursoDisciplina.DisciplinaUniqueID > 0 {  novoCursoDisciplina.DisciplinaUniqueID = cursoDisciplina.DisciplinaUniqueID  }
+
+	err = db.Save(&novoCursoDisciplina).Error
 	if err != nil {
 		c.JSON(400, gin.H{
 			"erro": "não foi possível editar o cursoDisciplina: " + err.Error(),
@@ -180,6 +201,6 @@ func EditarCursoDisciplina(c *gin.Context) {
 		return
 	}
 
-	c.JSON(200, cursoDisciplina)
+	c.JSON(200, novoCursoDisciplina)
 }
 
