# controllers/disciplinaMatriculaController.go
@@ -4,8 +4,10 @@ import (
 	"strconv"
 	"time"
 	"github.com/gin-gonic/gin"
+	"github.com/go-playground/validator/v10"
 	"github.com/trsouza/faculdade-pd/database"
 	"github.com/trsouza/faculdade-pd/models"
+	"github.com/trsouza/faculdade-pd/dtos"
 )
 
 // @Summary Busca disciplinaMatricula por id
@@ -67,14 +69,12 @@ func BuscarDisciplinaMatriculas(c *gin.Context) {
 // @Tags Controller DisciplinaMatricula
 // @Accept json
 // @Produce json
-// @Param disciplinaMatricula body models.DisciplinaMatricula true "disciplinaMatricula"
+// @Param disciplinaMatricula body dtos.DisciplinaMatriculaCreateDTO true "disciplinaMatricula"
 // @Success 201 {object} models.DisciplinaMatricula
 // @Router /disciplina-matricula [POST]
 func CriarDisciplinaMatricula(c *gin.Context) {
-	var disciplinaMatricula models.DisciplinaMatricula
+	var disciplinaMatricula dtos.DisciplinaMatriculaCreateDTO
 	db := database.GetDatabase()
-
-	disciplinaMatricula.DataMatricula = time.Now()
 
 	err := c.ShouldBindJSON(&disciplinaMatricula)
 	if err != nil {
@@ -84,7 +84,24 @@ func CriarDisciplinaMatricula(c *gin.Context) {
 		return
 	}
 
-	err = db.Create(&disciplinaMatricula).Error
+	
+	validate := validator.New()
+
+    err = validate.Struct(disciplinaMatricula)
+    if err != nil {
+        c.JSON(400, gin.H{
+			"erro": "objeto inválido: " + err.Error(),
+		})
+		return
+    }
+
+	novaDisciplinaMatricula := models.DisciplinaMatricula{
+		CursoDisciplinaUniqueID: disciplinaMatricula.CursoDisciplinaUniqueID,
+		AlunoUniqueID: disciplinaMatricula.AlunoUniqueID,
+		DataMatricula: time.Now(),
+	}
+
+	err = db.Create(&novaDisciplinaMatricula).Error
 	if err != nil {
 		c.JSON(400, gin.H{
 			"erro": "não foi possível salvar a disciplinaMatricula: " + err.Error(),
@@ -92,7 +109,7 @@ func CriarDisciplinaMatricula(c *gin.Context) {
 		return
 	}
 
-	c.JSON(201, disciplinaMatricula)
+	c.JSON(201, novaDisciplinaMatricula)
 }
 
 // @Summary Deleta uma disciplinaMatricula
@@ -136,16 +153,17 @@ func DeletarDisciplinaMatricula(c *gin.Context) {
 }
 
 // @Summary Edita uma disciplinaMatricula
-// @Description Edita uma disciplinaMatricula, os campos que devem ser enviados são: aluno_unique_id e curso_disciplina_unique_id
+// @Description Edita uma disciplinaMatricula, os campos que podem ser enviados são: aluno_unique_id e curso_disciplina_unique_id
 // @Tags Controller DisciplinaMatricula
 // @Accept json
 // @Produce json
 // @Param id path int true "UniqueID da disciplinaMatricula"
-// @Param disciplinaMatricula body models.DisciplinaMatricula true "disciplinaMatricula"
+// @Param disciplinaMatricula body dtos.DisciplinaMatriculaUpdateDTO true "disciplinaMatricula"
 // @Success 200 {object} models.DisciplinaMatricula
 // @Router /disciplina-matricula/{id} [PUT]
 func EditarDisciplinaMatricula(c *gin.Context) {
-	var disciplinaMatricula models.DisciplinaMatricula
+	var disciplinaMatricula dtos.DisciplinaMatriculaUpdateDTO
+	var novaDisciplinaMatricula models.DisciplinaMatricula
 	db := database.GetDatabase()
 	id := c.Param("id")
 
@@ -157,7 +175,7 @@ func EditarDisciplinaMatricula(c *gin.Context) {
 		return
 	}
 
-	err = db.First(&disciplinaMatricula, newid).Error
+	err = db.First(&novaDisciplinaMatricula, newid).Error
 	if err != nil {
 		c.JSON(404, gin.H{
 			"erro": "DisciplinaMatricula não encontrada: " + err.Error(),
@@ -173,7 +191,10 @@ func EditarDisciplinaMatricula(c *gin.Context) {
 		return
 	}
 
-	err = db.Save(&disciplinaMatricula).Error
+	if disciplinaMatricula.CursoDisciplinaUniqueID > 0 { novaDisciplinaMatricula.CursoDisciplinaUniqueID = disciplinaMatricula.CursoDisciplinaUniqueID}
+	if disciplinaMatricula.AlunoUniqueID > 0 { novaDisciplinaMatricula.AlunoUniqueID = disciplinaMatricula.AlunoUniqueID}
+
+	err = db.Save(&novaDisciplinaMatricula).Error
 	if err != nil {
 		c.JSON(400, gin.H{
 			"erro": "não foi possível editar a disciplinaMatricula: " + err.Error(),
@@ -181,6 +202,6 @@ func EditarDisciplinaMatricula(c *gin.Context) {
 		return
 	}
 
-	c.JSON(200, disciplinaMatricula)
+	c.JSON(200, novaDisciplinaMatricula)
 }
 
